--- a/styles/login_register.css
+++ b/styles/login_register.css
@@ -57,3 +57,25 @@ span{
 #captcha-image{
     height: 60px;
 }
+
+.btn{
+    font-size: 20px;
+    text-align: center;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;
+    font-weight: bold;
+    border-radius: 10px;
+}
+
+.btn:hover {
+    background-position: right center; 
+}
+
+.btn-submit, .btn-submit:hover{
+    background-image: linear-gradient(to right, #fc3606 0%, #fda085 51%, #fc7704 100%) !important;
+}
+
+.btn-back, .btn-back:hover{
+    background-image: linear-gradient(to right, #0a64a7 0%, #258dcf 51%, #3db1f3 100%) !important;
+}
